# tailor-resumes

./: .env.example  .gitignore  README.md  pyproject.toml  training_data.pkl
gradio/: app.py
src/tailor_resume/: crew.py  llm.py  main.py
src/tailor_resume/config/: agents.yaml  tasks.yaml
src/tailor_resume/tools/: custom_tool.py
