[tool.poetry]
name = "tailor_resume"
version = "0.1.0"
description = "tailor-resume using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "0.35.7" }
langchain-groq = "^0.1.5"
langchain-huggingface = "^0.0.3"
langchain-anthropic = "^0.1.0"

[tool.poetry.scripts]
tailor_resume = "tailor_resume.main:run"
train = "tailor_resume.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
